# python-project-83

./: .gitignore  Makefile  README.md  __init__.py  app.py  database.sql  pyproject.toml  q
.github/workflows/: Project-CI.yml
page_analyzer/: __init__.py  app.py  build.sh  database.py  logic_checks.py  validator.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
templates/: base.html
