[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["gamid <kalldrek@yandex.ru>"]

[tool.poetry.dependencies]
gunicorn = "^21.2.0"
Flask = [{version="^3.0.0", python="empty"}]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
