[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["gamid <kalldrek@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^21.2.0"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
