[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["gamid <kalldrek@yandex.ru>"]
readme = "README.md"
packages = [{include="page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"
bs4 = "^0.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
